artifacts/routing/match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: test
spec:
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  - mesh
  hosts:
  - app.istio.weavedx.com
  - podinfo
  http:
  - match:
    - headers:
        user-agent:
          regex: ^(?!.*Chrome)(?=.*\bSafari\b).*$
    route:
    - destination:
        host: podinfo
        port:
          number: 9898
      weight: 0
    - destination:
        host: podinfo-canary
        port:
          number: 9898
      weight: 100
  - route:
    - destination:
        host: podinfo
        port:
          number: 9898
      weight: 100
