artifacts/routing/weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: test
  labels:
    app: podinfo
spec:
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  - mesh
  hosts:
  - podinfo.iowa.weavedx.com
  - podinfo
  http:
  - route:
    - destination:
        host: podinfo-primary
        port:
          number: 9898
      weight: 100
    - destination:
        host: podinfo
        port:
          number: 9898
      weight: 0
